--- a/html/ethereum_max_wei_finder/src/controllers/populate_database.html
+++ b/html/ethereum_max_wei_finder/src/controllers/populate_database.html
@@ -38,7 +38,7 @@ def populateDatabase():
     validateArguments(request)
     populateBlockRange(request)
 
-    blockCrawlerService = BlockCrawlerService(request.url, request.databaseURL)
+    blockCrawlerService = BlockCrawlerService(request.endpoint, request.databaseURL)
     blockCrawlerService.populateDatabase(request.firstBlock, request.lastBlock)</code></pre>
 </details>
 </section>
@@ -66,7 +66,7 @@ def populateDatabase():
     validateArguments(request)
     populateBlockRange(request)
 
-    blockCrawlerService = BlockCrawlerService(request.url, request.databaseURL)
+    blockCrawlerService = BlockCrawlerService(request.endpoint, request.databaseURL)
     blockCrawlerService.populateDatabase(request.firstBlock, request.lastBlock)</code></pre>
 </details>
 </dd>
