Change to snake_case

--- a/html/ethereum_max_wei_finder/main.html
+++ b/html/ethereum_max_wei_finder/main.html
@@ -34,7 +34,7 @@ def main():
     Then, finds the block in the provided range that has the most wei transacted and prints it
     &#34;&#34;&#34;
     populateDatabase()
-    getBlockWithMaxWeiTransacted()
+    print(getBlockWithMaxWeiTransacted())
 
 if __name__ == &#39;__main__&#39;:
     main()</code></pre>
@@ -62,7 +62,7 @@ Then, finds the block in the provided range that has the most wei transacted and
     Then, finds the block in the provided range that has the most wei transacted and prints it
     &#34;&#34;&#34;
     populateDatabase()
-    getBlockWithMaxWeiTransacted()</code></pre>
+    print(getBlockWithMaxWeiTransacted())</code></pre>
 </details>
 </dd>
 </dl>
