--- a/html/ethereum_max_wei_finder/src/controllers/populate_database.html
+++ b/html/ethereum_max_wei_finder/src/controllers/populate_database.html
@@ -38,8 +38,8 @@ def populateDatabase():
     validateArguments(request)
     populateBlockRange(request)
 
-    blockCrawlerService = BlockCrawlerService(request.endpoint, request.databaseURL)
-    blockCrawlerService.populateDatabase(request.firstBlock, request.lastBlock)</code></pre>
+    block_crawler_service = BlockCrawlerService(request.endpoint, request.database_url)
+    block_crawler_service.populateDatabase(request.first_block, request.last_block)</code></pre>
 </details>
 </section>
 <section>
@@ -66,8 +66,8 @@ def populateDatabase():
     validateArguments(request)
     populateBlockRange(request)
 
-    blockCrawlerService = BlockCrawlerService(request.endpoint, request.databaseURL)
-    blockCrawlerService.populateDatabase(request.firstBlock, request.lastBlock)</code></pre>
+    block_crawler_service = BlockCrawlerService(request.endpoint, request.database_url)
+    block_crawler_service.populateDatabase(request.first_block, request.last_block)</code></pre>
 </details>
 </dd>
 </dl>
